--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,7 @@
                             <mainClass>${profiles.mainClass}</mainClass>
                         </manifest>
                     </archive>
+                    <finalName>target</finalName>
                 </configuration>
                 <executions>
                     <execution>
